[gd_scene load_steps=7 format=3 uid="uid://ur3rvrdl7x2e"]

[ext_resource type="Script" uid="uid://byb7vmt2v3am" path="res://Rigidbody4d.gd" id="1_g00db"]
[ext_resource type="PackedScene" uid="uid://c1o8j2u316xe7" path="res://transform_4d.tscn" id="2_805qq"]
[ext_resource type="Script" uid="uid://ckfqyr1h15ykr" path="res://Rotors.gd" id="3_8x3kb"]
[ext_resource type="Script" uid="uid://4oacuinc3vwr" path="res://CollisionShape4D.gd" id="4_sf1kl"]

[sub_resource type="Resource" id="Resource_adhhx"]
script = ExtResource("3_8x3kb")

[sub_resource type="Resource" id="Resource_4a3q4"]
script = ExtResource("3_8x3kb")

[node name="Rigidbody4D" type="Node3D"]
script = ExtResource("1_g00db")

[node name="Transform4D" parent="." instance=ExtResource("2_805qq")]
rotor = SubResource("Resource_adhhx")
translation = Vector4(0, 0, 0, 0)
last_rotation = SubResource("Resource_4a3q4")

[node name="CollisionShape4D" type="Node3D" parent="."]
script = ExtResource("4_sf1kl")
